--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,5 @@
 mat-toolbar{
+  background-color: var(--primary-color)!important;
   height: var(--menu-height);
   position: fixed;
   z-index: 2;
@@ -19,7 +20,6 @@ mat-toolbar button[action=MenuSwitch]{
   flex-grow: 1;
   flex-direction: row-reverse;
 }
-
 div.buttonBar{
   float: right;
   position: relative;
@@ -30,13 +30,41 @@ div.buttonBar{
   justify-content: center;
   align-items: center;
 }
+.menuButton mat-menu {
+  position: absolute;
+  top: 48px;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  max-height: 0vh;
+  overflow: hidden;
+}
+.menuButton button[current]+mat-menu {
+  max-height: 10vh;
+}
+.menuButton mat-menu::before {
+  content: "";
+  border: 10px solid transparent;
+  border-bottom-color:#fff;
+  width: 0;
+  position: relative;
+  left: 25%;
+  transform: translateX(calc(-100% - 10px));
+}
+.menuButton mat-menu button {
+  color: var(--primary-color);
+  background-color: #fff;
+}
 div.userprofile{
   flex-direction: row-reverse;
   flex-grow: 0;
   margin: 0 1%;
 }
-div.buttonBar:not(.horizontal) button{
+div.buttonBar:not(.horizontal) button, div.buttonBar:not(.horizontal) div.menuButton{
   flex-grow: 1;
+}
+div.buttonBar:not(.horizontal) div.menuButton>button{
+  width: 100%;
 }
 div.profileImage {
   border-radius: calc(var(--menu-height));
@@ -84,13 +112,7 @@ div.buttonBar b{
   font-size: 20pt;
   font-weight: bold;
 }
-mat-menu, mat-menu *{
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    flex: 1 0 100%;
-    flex-direction: column;
-}
+
 /* Notification & Messages side panel */
 div.rightPanel {
   height: calc(100vh - (var(--menu-height) * 1));
