--- a/src/app/subcomponents/user-thumbnail/user-thumbnail.component.html
+++ b/src/app/subcomponents/user-thumbnail/user-thumbnail.component.html
@@ -8,7 +8,7 @@
       <mat-card-contents>
         <mat-card-header>
           <mat-card-title *ngIf="user">
-            {{ user.first_name }} {{user.last_name}} <a class="address">@{{user.id}}</a>
+            {{ user.first_name }} {{user.last_name}} <a class="address">@{{user.email}}</a>
           </mat-card-title>
 
           <mat-card-subtitle>
