--- a/src/app/view_components/register/register.component.html
+++ b/src/app/view_components/register/register.component.html
@@ -1,16 +1,16 @@
 <div class="container">
   <div class="layout">
     <h2 style="margin: 0;">Login</h2>
-    <form class="flex" action="">
+    <form class="flex" action="/users" method="POST">
       <div class="col2">
-        <input [(ngModel)]="user.first_name" type="text" name="first_name" placeholder="First Name"/>
-        <input [(ngModel)]="user.email" type="email" name="email" placeholder="Email"/>
-        <input [(ngModel)]="user.password" type="password" name="password" placeholder="Password"/>
+        <input mat-input type="text" name="first_name" (change)="updateField($event)" placeholder="First Name"/>
+        <input mat-input type="email" name="email" (change)="updateField($event)" placeholder="Email"/>
+        <input mat-input type="password" name="password" (change)="updateField($event)" placeholder="Password"/>
       </div>
       <div class="col2">
-        <input [(ngModel)]="user.last_name" type="text" name="last_name" placeholder="Last Name"/>
-        <input type="email" name="email" placeholder="Confirm Email"/>
-        <input type="password" name="password" placeholder="Confirm Password"/>
+        <input mat-input type="text" name="last_name" (change)="updateField($event)" placeholder="Last Name"/>
+        <input mat-input type="email" name="email" placeholder="Confirm Email"/>
+        <input mat-input type="password" name="password" placeholder="Confirm Password"/>
         <div style="display: contents;">
           <div class="mat-card-actions">
             <button mat-button (click)="this.registerUser($event)">Inscription</button>
