--- a/src/app/subcomponents/company-thumbnail/company-thumbnail.component.html
+++ b/src/app/subcomponents/company-thumbnail/company-thumbnail.component.html
@@ -43,7 +43,7 @@
       </div>
     </mat-card-info>
     <mat-card-actions *ngIf="!embedded">
-      <button mat-button routerLink="{{ '/company/' + company.id }}">Consulter</button>
+      <button mat-button routerLink="{{ '/profile/company/' + company.id }}">Consulter</button>
       <!-- <button mat-button>Ajouter aux favoris</button> -->
     </mat-card-actions>
   </mat-card-content>
