--- a/src/app/subcomponents/user-thumbnail/user-thumbnail.component.css
+++ b/src/app/subcomponents/user-thumbnail/user-thumbnail.component.css
@@ -59,7 +59,7 @@ user-details{
   height: 100%;
 }
 .embedded mat-card-badges{
-  display: none;
+  display: block;
 }
 .embedded mat-card-info {
   display: flex;
@@ -106,6 +106,7 @@ user-details{
   }
   .embedded mat-card-contents{
     width: auto;
+    flex-grow: 1;
   }
 
 }
