--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -66,7 +66,7 @@
     </div>
   </div>
   <div class="buttonBar horizontal search" [ngClass]="{'current': searchPanel}">
-    <input matInput>
+    <input matInput [(ngModel)]="searchbarValue">
   </div>
   <div class="buttonBar horizontal">
     <button mat-button [ngClass]="{'current': searchPanel}" (click)="toggleSearchPanel()" >
