--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
       padding-left: 10px;">{{ user.email }}</span>
     </div>
     <div class="buttonBar" *ngIf="user">
-      <button mat-button (click)="toggleSelector($event)" routerLink="/offers" current>
+      <button mat-button (click)="toggleSelector($event)" routerLink="/home" current>
         <i class="material-icons">home</i>
         Home
       </button>
@@ -56,7 +56,7 @@
         <i class="material-icons">info</i>
         About
       </button>
-      <button mat-button (click)="toggleSelector($event)" routerLink="{{ '/user/'+user.id }}">
+      <button mat-button (click)="toggleSelector($event)" routerLink="{{ '/profile/user/'+user.id }}">
         <i class="material-icons">account_box</i>
         My profile
       </button>
