--- a/src/app/view_components/post-page/post-page.component.html
+++ b/src/app/view_components/post-page/post-page.component.html
@@ -1,9 +1,7 @@
-<mat-card style="margin-top:10px;" @develop [ngClass]="{'noEmbed' : !embed}" (click)="goto()">
+<mat-card style="margin-top:10px;" @developDown>
   <mat-card-content>
     <mat-card-info>
-      <div class="Image" [attr.focus]="false" (click)="toggleFocus($event)">
-        <div class="img" [ngStyle]="{'background-image': 'url(' + post.imageUrl + ')'}"></div>
-      </div>
+
 
       <mat-card-contents>
         <mat-card-header>
@@ -19,18 +17,36 @@
           </mat-card-subtitle>
 
         </mat-card-header>
-        <p *ngIf="embed" (click)="readMore($event)" [attr.shrink_text]="true">
-          <span>
-            {{post.description}}<br>
-          </span>
-        </p>
+        <ul *ngIf="post.type === 'offer' && !embed">
+          <li>
+            <h2>
+              Work days:
+              {{ post['workdays'] }}
+            </h2>
+          </li>
+          <li>
+            <h2>
+              Work hours:
+              {{ post['workhours'] }}
+            </h2>
+          </li>
+          <li>
+            <h2>
+              Salary:
+              {{ post['salary'] }}
+            </h2>
+          </li>
+        </ul>
 
       </mat-card-contents>
-      <p *ngIf="!embed" (click)="readMore($event)" [attr.shrink_text]="true">
+      <p (click)="readMore($event)" [attr.shrink_text]="true">
         <span>
           {{post.description}}<br>
         </span>
       </p>
+      <div class="Image" [attr.focus]="false" (click)="toggleFocus($event)">
+        <img src="{{ post.imageUrl }}"/>
+      </div>
     </mat-card-info>
     <mat-card-actions>
       <button mat-button>Liker</button>
